// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders search bar correctly 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root css-jr539y-MuiFormControl-root-MuiTextField-root"
  data-testid="search-bar"
  filter={false}
  handleChange={[Function]}
  handleClick={[Function]}
>
  <div
    className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={false}
      className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
      disabled={false}
      id=":r0:"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search all assets"
      required={false}
      type="text"
    />
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-h51xkb-MuiButtonBase-root-MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div>
        <img
          alt="icon"
          className="css-14oiz6v"
          data-testid="iconComponent"
          height="20.31px"
          src={
            {
              "process": [Function],
            }
          }
          width="20.31px"
        />
      </div>
    </button>
    <fieldset
      aria-hidden={true}
      className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        className="css-ihdtdm"
      >
        <span
          className="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`renders search bar with filter correctly 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root css-jbv63a-MuiFormControl-root-MuiTextField-root"
  data-testid="search-bar"
  filter={true}
  handleChange={[Function]}
  handleClick={[Function]}
>
  <div
    className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={false}
      className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
      disabled={false}
      id=":r1:"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search all assets"
      required={false}
      type="text"
    />
    <div
      className="css-w4z10b-MuiStack-root"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-h51xkb-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <div>
          <img
            alt="icon"
            className="css-14oiz6v"
            data-testid="iconComponent"
            height="20.31px"
            src={
              {
                "process": [Function],
              }
            }
            width="20.31px"
          />
        </div>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <hr
        className="MuiDivider-root MuiDivider-middle MuiDivider-vertical MuiDivider-flexItem css-eg8219-MuiDivider-root"
        style={
          {
            "marginTop": "10px",
          }
        }
      />
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-h51xkb-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <div>
          <img
            alt="icon"
            className="css-mw0g01"
            data-testid="iconComponent"
            height="22px"
            src={
              {
                "process": [Function],
              }
            }
            width="18px"
          />
        </div>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <fieldset
      aria-hidden={true}
      className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        className="css-ihdtdm"
      >
        <span
          className="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
